#4 - refactored get all images to get all image data. The client can then download images one at a time as needed. added Images to mapper service.